@@ -1,5 +1,8 @@
+.402
+  - Update tests, add comparer for EmailAddr
+
 .401
-  - Remove Net::Subnets as dependency, since it seems to have evaporated
+  - Remove Net::Subnets as dependency
 
 .400
   - Hopefully ironed out dependencies in Makefile
